--- a/CSS/main.css
+++ b/CSS/main.css
@@ -94,7 +94,7 @@ input:focus {
 
 .banner-nav-items1-img{
     width: 100%; height: 100%;
-    background-image: url("./img/photo-1490914327627-9fe8d52f4d90.avif");
+    background-image: url("../img/photo-1490914327627-9fe8d52f4d90.avif");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
