修正圖片路徑

--- a/CSS/cart.css
+++ b/CSS/cart.css
@@ -39,7 +39,7 @@
 .cart-items-img1{
     width: 110px;
     height: 100px;
-    background-image: url("./img/photo-1504855328839-2f4baf9e0fd7.avif");
+    background-image: url("../img/photo-1504855328839-2f4baf9e0fd7.avif");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -48,7 +48,7 @@
 .cart-items-img2{
     width: 110px;
     height: 100px;
-    background-image: url("./img/photo-1525203135335-74d272fc8d9c.avif");
+    background-image: url("../img/photo-1525203135335-74d272fc8d9c.avif");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -57,7 +57,7 @@
 .cart-items-img3{
     width: 110px;
     height: 100px;
-    background-image: url("./img/photo-1464305795204-6f5bbfc7fb81.avif");
+    background-image: url("../img/photo-1464305795204-6f5bbfc7fb81.avif");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
