--- a/CSS/checkout.css
+++ b/CSS/checkout.css
@@ -318,7 +318,7 @@
 .checkout-order-list-img1{
     width: 120px;
     height: 80px;
-    background-image: url("./img/photo-1504855328839-2f4baf9e0fd7.avif");
+    background-image: url("../img/photo-1504855328839-2f4baf9e0fd7.avif");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -327,7 +327,7 @@
 .checkout-order-list-img2{
     width: 120px;
     height: 80px;
-    background-image: url("./img/photo-1525203135335-74d272fc8d9c.avif");
+    background-image: url("../img/photo-1525203135335-74d272fc8d9c.avif");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -336,7 +336,7 @@
 .checkout-order-list-img3{
     width: 120px;
     height: 80px;
-    background-image: url("./img/photo-1464305795204-6f5bbfc7fb81.avif");
+    background-image: url("../img/photo-1464305795204-6f5bbfc7fb81.avif");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
