--- a/CSS/checkout-success.css
+++ b/CSS/checkout-success.css
@@ -3,7 +3,7 @@
     width: 940px;
     height: 460px;
     margin-bottom: 60px;
-    background-image: url("./img/photo-1505935428862-770b6f24f629.avif");
+    background-image: url("../img/photo-1505935428862-770b6f24f629.avif");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
