--- a/CSS/checkout.css
+++ b/CSS/checkout.css
@@ -226,7 +226,7 @@
     flex-direction: column;
     align-self: flex-start;
     gap: 20px;
-    width: 300px;
+    max-width: 300px;
     background-color: #fff;
     color: #8DA291;
 }
@@ -244,29 +244,30 @@
 }
 
 .checkout-order-price{
-    width: 100%;
+    padding: 0px 30px;
     display: flex;
     flex-direction: column;
     align-items: center;
     font-weight: 300;
+    border: 1px solid #EAF0ED;
 }
 
 .checkout-order-price-subtotal{
-    width: 260px;
+    width: 90%;
     padding-top: 15px;
     display: flex;
     justify-content: space-between;
 }
 
 .checkout-order-price-deliveryfee{
-    width: 260px;
+    width: 90%;
     padding-top: 8px;
     display: flex;
     justify-content: space-between;
 }
 
 .checkout-order-price-total{
-    width: 260px;
+    width: 90%;
     padding: 16px 0px;
     display: flex;
     justify-content: space-between;
@@ -274,9 +275,6 @@
     font-weight: 600;
 }
 
-.checkout-order-price{
-    border: 1px solid #EAF0ED;
-}
 
 
 /* 購物清單區 */
