--- a/CSS/main.css
+++ b/CSS/main.css
@@ -27,12 +27,14 @@
 }
 
 .index-banner-container{
-    width: 940px;
+    max-width: 940px;
 }
 
 .index-container{
+    
     flex-direction: column;
 }
+
 
 /* input框線移除 */
 
@@ -59,18 +61,23 @@ input:focus {
 .banner-nav{
     position: relative;
     bottom: 70px;
+    max-width: 100%;
 }
 
 .banner-nav-container{
     gap: 2px;
     justify-content: center;
+    max-width: 100%;
 }
 
 .banner-nav-items{
+    width: 250px;
+    height: 250px;
     position: relative;
-    width: 260px;
-    height: 260px;
+    
 }
+
+
 
 .banner-nav-items-overlay{
     font-size: 24px;
@@ -131,7 +138,7 @@ input:focus {
 }
 
 .index-center-whychoose{
-    width: 100%;
+    max-width: 100%;
     padding-bottom: 60px;
 }
 
@@ -174,7 +181,7 @@ input:focus {
 }
 
 .index-center-whyeat{
-    width: 100%;
+    max-width: 100%;
     padding-bottom: 80px;
 }
 
@@ -204,6 +211,10 @@ input:focus {
     order: 1;
 }
 
+.product-items{
+    max-width: 100%;
+}
+
 /* 網頁下方slogan */
 
 .index-slogan{
@@ -219,12 +230,61 @@ input:focus {
 /* 網頁下面產品清單 */
 
 .index-products-list{
+    max-width: 100%;
     padding-bottom: 60px;
+}
+
+.index-products{
+    max-width: 100%;
 }
 
 .index-products-mobile{
     display: none;
 }
+
+
+/* 這是我沒有辦法了先這樣
+
+我相信未來的我會學好
+
+然後把他解決的地方 -2024.03.29*/
+
+.index-product-items-img img{
+    display: block;
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.product-items-special{
+    width: 85%;
+}
+
+
+/* 破版部分的RWD */
+
+@media(max-width: 900px){
+    .index-banner-container{
+        width: 650px;
+    }
+}
+
+
+
+@media (max-width: 770px){
+    .index-banner-container{
+        width: 550px;
+    }
+
+    .product-items-special{
+        width: 70%;
+    }
+    .product-carts-container1{
+        gap:5px;
+    }
+
+}
+
+
 
 /* 手機RWD */
 
@@ -244,6 +304,7 @@ input:focus {
     }
 
     .banner-nav-items{
+        max-width: 100%;
         height: 200px;
     }
 
